# stormbird

./: CHANGELOG.md  README.md  todos. md
fmus/stormbird_lifting_line/: Cargo.toml  README.md
fmus/stormbird_lifting_line/src/: input_filters.rs  lib.rs  model_scaling.rs  parameters.rs
interfaces/fmus/stormbird_lifting_line/: Cargo.toml  README.md
interfaces/pystormbird/: Cargo.toml  README.md  _build_backend.py  pyproject.toml
interfaces/pystormbird/.cargo/: config.toml
interfaces/pystormbird/examples/: README.md
interfaces/pystormbird/pystormbird/: __init__.py  __init__.pyi  lifting_line.py  lifting_line.pyi  line_force_model.py  line_force_model.pyi  section_models.py  section_models.pyi  smoothing.py  smoothing.pyi  wind.py  wind.pyi
interfaces/pystormbird/src/: lib.rs  line_force_model.rs  result_structs.rs  smoothing.rs
interfaces/stormbird_setup/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
pystormbird/: .gitignore  Cargo.toml  README.md  pyproject.toml
pystormbird/examples/: heaving_wing.py
pystormbird/examples/1 - section models/: README.md  foil_tuner.py  manual_multi_element_foil.py  naca_0012_Graf2014.py
pystormbird/examples/1 - single wing sail/: README.md  graf_2014_single_element.py  multi_element_foil_section.py  multi_element_multiple_angles.py  multiple_angles.py  section_model.py  simulation.py  single_case.py  single_element_foil_section.py  single_element_multiple_angles.py  single_element_single_case.py
pystormbird/examples/2 - single wing sail/: README.md  multi_element_multiple_angles.py  simulation.py  single_case.py  single_element_multiple_angles.py
pystormbird/examples/3 - single rotor_sail/: README.md  multiple_spin_ratios.py  rotor_simulation.py
pystormbird/examples/4 - moving wing/: heaving_wing.py
pystormbird/examples/4 - rotor_sail/: multiple_spin_ratios.py  rotor_simulation.py  single_rotor.py  single_spin_ratio.py
pystormbird/examples/5 - moving wing/: heaving_wing.py
pystormbird/examples/5 - wing sail interaction/: cfd_data.json  run_multiple_angles.py  run_single_angle.py  simulation.py
pystormbird/examples/comparison_data/: ostman_cfd_comparison_data.json
pystormbird/examples/heaving_wing/: heaving_wing.py
pystormbird/examples/high-lift wing sail/: atmospheric_boundary_layer.py  foil_model.py  simulation.py
pystormbird/examples/rotor_sail/: multiple_spin_ratios.py  rotor_simulation.py  single_rotor.py
pystormbird/examples/stalled_wings/: rotating_wing.py  stalled_wings_simulation.py
pystormbird/examples/two-element-wings/: atmospheric_boundary_layer.py  foil_model.py  simulation.py
pystormbird/examples/wing-sail-close-to-stall/: multiple_angles.py  simulation.py  single_case.py
pystormbird/src/: lib.rs  result_structs.rs  spatial_vector.rs  vec3.rs
pystormbird/src/actuator_line/: mod.rs  projection.rs
pystormbird/src/lifting_line/: mod.rs  simulation.rs
pystormbird/src/line_force_model/: builder.rs  mod.rs  span_line.rs
pystormbird/src/section_models/: foil.rs  mod.rs  rotating_cylinder.rs  varying_foil.rs
stormath/: Cargo.toml  README.md
stormath/src/: array2.rs  array_generation.rs  consts.rs  error.rs  finite_difference.rs  integration.rs  interpolation.rs  lib.rs  rigid_body_motion.rs  solvers.rs  special_functions.rs  statistics.rs  transition_functions.rs  type_aliases.rs
stormath/src/matrix/: linalg.rs  mod.rs  operators.rs  tranforms.rs
stormath/src/optimization/: mod.rs  particle_swarm.rs
stormath/src/optimize/: bounded_variable.rs  curve_fit.rs  mod.rs  particle_swarm.rs
stormath/src/smoothing/: end_condition.rs  gaussian.rs  mod.rs  moving_average.rs  polynomial.rs
stormath/src/sparse_matrix/: linalg.rs  mod.rs  operators.rs
stormath/src/spatial_vector/: geometry_functions.rs  iterators.rs  mod.rs  operators.rs  serde_implementations.rs  transformations.rs  vector_math.rs
stormbird/: Cargo.toml  README.md
stormbird/src/: elliptic_wing_theory.rs  error.rs  input_power.rs  lib.rs
stormbird/src/actuator_line/: builder.rs  mod.rs  projection_width_correction.rs  sampling.rs  settings.rs  solver.rs  velocity_sampling.rs  velocity_sampling_old.rs
stormbird/src/common_utils/: flow_derivatives.rs  forces_and_moments.rs  mod.rs  result.rs
stormbird/src/controller/: builder.rs  input.rs  logic.rs  measurements.rs  mod.rs  output.rs  prelude.rs  set_points.rs
stormbird/src/controllers/: dynamic_optimizer.rs  effective_angle_of_attack.rs  input.rs  measurements.rs  mod.rs  moving_average.rs  multi_sail_controller.rs  output.rs  particle_swarm_optimizer.rs  pid_controller.rs  prelude.rs  sail_controller.rs  weather_dependent_set_points.rs
stormbird/src/empirical_models/: blendermann_superstructre_forces.rs  freestream.rs  input_power.rs  mod.rs  prescribed_circulation_shape.rs
stormbird/src/extra_force_models/: blendermann_superstructre_forces.rs
stormbird/src/io_structs/: derivatives.rs  forces_and_moments.rs  freestream.rs  input.rs  input_state.rs  mod.rs  motion.rs  result.rs  velocity.rs
stormbird/src/io_utils/: csv_data.rs  folder_management.rs  folder_managment.rs  mod.rs
stormbird/src/lifting_line/: mod.rs  simulation.rs  simulation_builder.rs  velocity_input.rs
stormbird/src/line_force_model/: builder.rs  data_access.rs  data_update.rs  derivatives.rs  force_calculations.rs  force_input.rs  global_geometry_data.rs  input_power.rs  mod.rs  prelude.rs  prescribed_circulation.rs  rigid_body_motion.rs  single_wing.rs  smoothing.rs  solver_utils.rs  span_line.rs  value_mapping.rs
stormbird/src/math_utils/: array_generation.rs  finite_difference.rs  integration.rs  interpolation.rs  mod.rs
stormbird/src/section_models/: common_functions.rs  foil.rs  mod.rs  rotating_cylinder.rs  varying_foil.rs
stormflow/: Cargo.toml  README.md
stormflow/examples/: .gitignore  actuator_line_test.json  box_test.json  plot_stormbird_results.py  sphere_test.json  wall_test.json
stormflow/src/: actuator_line_interface.rs  boundary_conditions.rs  error.rs  gpu_context.rs  grid.rs  lib.rs  main.rs  staggered_spatial_vectors.rs
(+632 files in other folders)
