[package]
name = "pystormbird"
version = "0.2.0"
authors = ["Jarle Kramer <jarle.kramer@gmail.com>"]
description = "Python interface to the Stormbird library."
homepage = "https://github.com/jarlekramer/stormbird"
readme = "../README.md"
repository = "https://github.com/jarlekramer/stormbird"
license = "GPL-3.0"
license_file = "../LICENSE"
edition = "2021"

[lib]
name = "pystormbird"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"

stormbird = { path = "../stormbird"}
