[package]
name = "stormath"
version = "0.1.1"
authors = ["Jarle Kramer <jarle.kramer@gmail.com>"]
description = "A selction of math utility functionality"
homepage = "https://github.com/NTNU-IMT/stormbird"
readme = "README.md"
license = "GPL-3.0"
license_file = "LICENSE"
edition = "2021"

[dependencies]
rand = "0.9.1"
serde = { version = "1.0.204", features = ["derive"] }

[features]
padded_spatial_vectors = []
single_precision = []
