[package]
name = "stormath"
version = "0.3.0"
authors = ["Jarle Kramer <jarle.kramer@gmail.com>"]
description = "A selection of math utility functionality"
homepage = "https://github.com/NTNU-IMT/stormbird"
readme = "README.md"
license = "GPL-3.0"
license_file = "LICENSE"
edition = "2021"

[dependencies]
rand = "0.9.1"
serde = { version = "1.0.204", features = ["derive"] }
rayon = { version = "1.12.0"}

[features]
padded_spatial_vectors = []
single_precision = []
