[package]
name = "stormflow"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
stormath = {path = "../../stormbird/stormath", features=["single_precision"]}
stormbird = {path = "../../stormbird/stormbird", features=["single_precision"]}
