[package]
name = "stormbird_lifting_line"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fmu_from_struct = { version = "0.1.1" }

stormbird = { path = "../../stormbird"}
math_utils = { path = "../../math_utils"}
serde_json = "1.0.128"
serde = { version = "1.0.215", features = ["derive"] }
reqwest = { version = "0.12.10", features = ["blocking"] }
bincode = "1.3.3"
