[package]
name = "stormbird_lifting_line"
version = "0.5.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fmu_from_struct = { path = "../../../fmu_from_struct/fmu_from_struct" }

stormbird = { path = "../../stormbird"}
stormath = { path = "../../stormath"}
serde_json = "1.0.128"
serde = { version = "1.0.215", features = ["derive"] }
