[package]
name = "pystormbird"
version = "0.9.0"
authors = ["Jarle Kramer <jarle.kramer@gmail.com>"]
description = "Python interface to the Stormbird library."
homepage = "https://github.com/NTNU-IMT/stormbird"
readme = "../../README.md"
repository = "https://github.com/NTNU-IMT/stormbird"
license = "GPL-3.0"
edition = "2021"

[lib]
name = "pystormbird"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3"}
pythonize = {version ="0.28.0"}

stormbird = { version="0.9.0", features = ["parallel"] }
stormath = { version="0.3.0" }
