[package]
name = "stormbird_lifting_line"
version = "0.5.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fmu_from_struct = { version = "0.1.2" }

stormbird = { path = "../../../stormbird"}
stormath = { version = "0.1.1"}
serde_json = "1.0.128"
serde = { version = "1.0.215", features = ["derive"] }

[features]
parallel = ["stormbird/parallel"]
