[package]
name = "stormbird_lifting_line"
version = "0.9.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fmu_from_struct = { version = "0.2.1" }

stormbird = { version = "0.9.0"}
stormath = { version = "0.3.0"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[features]
parallel = ["stormbird/parallel"]
